[package]
name = "rs-run"
version = "0.8.2"
edition = "2021"
license = "Apache-2.0"

[dependencies]
async-trait = "0.1"
lazy_static = "1.4"
num_cpus = "1.16"
once_cell = "1.18"
paste = "1.0"
prometheus = { version = "0.13.3", features = ["process"] }
serde = { version = "1.0", features = ["derive"] }
snafu = "0.8"
tokio = { version = "1.36", features = ["full"] }
tokio-util = { version = "0.7", features = ["io-util", "compat"] }
tokio-metrics = "0.3"
tokio-metrics-collector = { git = "https://github.com/MichaelScofield/tokio-metrics-collector.git", rev = "89d692d5753d28564a7aac73c6ac5aba22243ba0" }
tracing = "0.1.40"
# common-error.workspace = true
# common-macro.workspace = true
# common-telemetry.workspace = true


[dev-dependencies]
tokio-test = "0.4"
