[package]
name = "rs-run"
version = "0.8.2"
edition = "2021"
license = "Apache-2.0"

[dependencies]
async-trait = "0.1"
lazy_static = "1.4"
num_cpus = "1.16"
once_cell = "1.18"
paste = "1.0"
pin-project = "1.1"
prometheus = { version = "0.13.3", features = ["process"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
snafu = "0.8"
sysinfo = "0.30.13"
tokio = { version = "1.36", features = ["full"] }
tokio-metrics = "0.3"
tokio-metrics-collector = { git = "https://github.com/MichaelScofield/tokio-metrics-collector.git", rev = "89d692d5753d28564a7aac73c6ac5aba22243ba0" }
tokio-util = { version = "0.7", features = ["io-util", "compat"] }
tracing = "0.1.40"

# common-error.workspace = true
# common-macro.workspace = true
# common-telemetry.workspace = true

[dev-dependencies]
tokio-test = "0.4"
